# mempager

./: .clang-format  .gitignore  CMakeLists.txt  README.md  configure.sh
src/: argparse.c  argparse.h  clock.c  clock.h  fifo.c  fifo.h  mempager.c  pager.c  pager.h  utils.c  utils.h
src/pagers/: clock.c  clock.h  fifo.c  fifo.h
src/utils/: mem.c  mem.h  misc.c  misc.h  rand.c  rand.h  types.h
